# nn

./: LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
gnn/layers/: __init__.py  activators.py  base.py  combined.py  dense.py  softmax.py
nn/: __init__.py  network.py  normalizators.py
nn/genetic/: __init__.py  pickers.py  pool.py
nn/layers/: __init__.py  activators.py  base.py  combined.py  dense.py  softmax.py
