[tool.poetry]
name = "gnn"
version = "0.1.0"
description = ""
authors = ["Mikołaj Rosowski <m.rosowski1@wp.pl>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.3"
jsonpickle = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.941"
black = "^22.1.0"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
